# M31POESEIDON2

./: README.md  SIMULATION_GUIDE.md  VERIFICATION_REPORT_TOP.md  验证总结_顶层模块.md
Plonky3-main/Plonky3-main/: Cargo.toml  build_log.txt  output.txt  output2.txt  output2_utf8.txt
Plonky3-main/Plonky3-main/mersenne-31/: Cargo.toml  vectors.inc
Plonky3-main/Plonky3-main/mersenne-31-workspace/: Cargo.toml
Plonky3-main/Plonky3-main/mersenne-31-workspace/examples/: m31_poseidon2_gen.rs
Plonky3-main/Plonky3-main/mersenne-31/examples/: gen_round_vectors.rs  gen_verify_vectors.rs  generate_vectors.rs  m31_poseidon2_gen.rs  verify_mds_mix.rs
constraints/: m31_poseidon2.xdc
mersenne-31-workspace/: Cargo.toml  build_error.txt  poseidon2_top_vectors.txt  round_test_vectors.txt  vectors.txt  vectors_utf8.txt
mersenne-31-workspace/examples/: dump_constants.rs  gen_constants.rs  gen_poseidon2_top_vectors.rs  gen_round_test_vectors.rs  gen_verify_vectors.rs  generate_vectors.rs  verify_mds_mix.rs
rtl/: m31_add.sv  m31_constants_pkg.sv  m31_mds_4x4.sv  m31_mix_layer.sv  m31_mul.sv  m31_op_full_round.sv  m31_op_partial_round.sv  m31_pkg.sv  m31_poseidon2_iterative.sv  m31_poseidon2_top.sv  m31_sbox.sv  m31_sqr.sv  m31_sub.sv
scripts/: reminder4imp.tcl  reminder4syn copy.tcl  synth_and_power.tcl
tb/: tb_m31_basic_ops.sv  tb_m31_mds_mix.sv  tb_m31_op_full_round.sv  tb_m31_op_partial_round.sv  tb_m31_poseidon2_iterative.sv  tb_m31_poseidon2_top.sv  tb_m31_sub_sbox.sv
